Fixed layout shift on Gallery.html

--- a/styles/mtb.css
+++ b/styles/mtb.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: var(--text-dark);
     background-color: var(--background);
     margin: 20px;
@@ -38,6 +38,7 @@ h2 {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
     color: var(--text-light);
     font-size: larger;
+    min-height: 70px;
 }
 
 .menu-toggle {
@@ -175,6 +176,7 @@ h2 {
     border: .5rem solid var(--border-color);
     border-radius: 8px;
     object-fit: cover;
+    aspect-ratio: 450 / 600;
 }
 
 figure {
